lex-reporter/force-app/main/default/objects/Usage_Metric__c/Usage_Metric__c.object-meta.xml
<CustomObject>
    <description>Measures usage of certain actions taken on the Lightning Reporter product - deleted daily</description>
    <label>Usage Metric</label>
    <nameField>
        <displayFormat>UM-{00000}</displayFormat>
        <label>Usage Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>