lex-reporter/force-app/main/default/objects/Usage_Metric__c/fields/Tracked_User__c.field-meta.xml
<CustomField>
    <fullName>Tracked_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tracked User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Usage_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>