lex-reporter/force-app/main/default/objects/Usage_Metric__c/fields/Tracked_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Tracked_User_Id__c</fullName>
    <label>Tracked User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>