lex-reporter/force-app/main/default/objects/Usage_Metric__c/fields/Tracked_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Tracked_User_Profile__c</fullName>
    <label>Tracked User Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>