lex-reporter/force-app/main/default/objects/Usage_Metric__c/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Profile</label>
    <type>Text</type>
</CustomField>